# python-microservice-template

./: .env-sample  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  startup.sh
alembic/: env.py
app/: __init__.py  database.py  dependencies.py  main.py
app/domain/common/: entity_model_base.py  exception_base.py  repository_base.py  schema_base.py  service_base.py
app/domain/partner_example/: exceptions.py  model.py  repository.py  schemas.py  service.py  tasks.py
app/domain/partner_example/migrations/: 2023_01_09_1836_27__9d22d8e29821_create_partner_example_table.py  2023_01_09_1837_09__9d22d8e29821_create_test_example_table.py
app/internal/: utils.py
app/internal/config/: __init__.py  gunicorn.py  logger.py  settings.py
app/routers/: __init__.py  healthcheck.py  partner.py
tests/: conftest.py
tests/integration/: test_routers.py
tests/unit/domain/patner_example/: test_service.py
tests/unit/internal/config/: test_config_database.py  test_config_gunicorn.py
