[tool.poetry]
name = "python-microservice-template"
version = "0.1.0"
description = "Python Microservice Template for API."
authors = ["Frank Ricardo Ramirez <frank.ramirez@zestfy.co>"]
readme = "README.md"
repository = "https://github.com/zestfy/python-microservice-template"

[information]
contact = ["Zestfy Team", "frank.ramirez@zestfy.co"]

[tool.poetry.dependencies]
python = "^3.11.0"
alembic = "^1.9.3"
aiokafka = "^0.8.0"
celery = "^5.2.7"
email-validator = "^1.3.0"
fastapi = "^0.90.0"
flower = "^1.2.0"
gunicorn = "^20.1.0"
httpx = "^0.23.3"
loguru = "^0.6.0"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.2"
PyJWT = "^2.6.0"
SQLAlchemy = "^1.4.45"
SQLAlchemy-Utils = "^0.39.0"
toml = "^0.10.2"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
validate-docbr = "^1.10.0"
tomli = "^2.0.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mock = "^5.0.0"
mypy = "^1.0.0"
pytest = "^7.2.0"
pytest-alembic = "^0.10.0"
pytest-asyncio = "^0.20.2"
pytest-cov = "^4.0.0"
pytest-httpx = "^0.21.2"
pytest-mock = "^3.10.0"
pylint = "^2.16.1"
pytest-mock-resources = "^2.6.5"

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
extend-exclude = '''
    ^/app/domain/common/exception_base.py
'''

[tool.pylint.format]
max-line-length = 120
ignore-docstrings = false
disable = 'C0114, E0401, R0903, E0611, C0115, E0213'
ignore = 'migrations'

[tool.coverage.run]
concurrency = [
    'multiprocessing'
]
parallel = true
sigterm = true
branch = true
source = [
    'app/'
]
omit = [
    ".*",
    "*/test/*"
]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = 'attr-defined'
exclude = ['migrations/']

[tool.coverage.report]
show_missing = true
sort = 'Miss'
fail_under = 50
skip_empty = true

[tool.coverage.paths]
source = [
    'app/'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
exclude_dirs = ["venv", ".venv", "env", ".env", "scripts"]